--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,6 @@ body {
 	height: 100vh;
 }
 
-main {
-	/* height: 100%; */
-	display: flex;
-	flex-direction: column;
-	/* justify-content: space-between; */
-	align-items: center;
-}
 
 /* Dans le main */
 
@@ -38,6 +31,34 @@ div.title {
 
 .counter {
 	font-size: 5em;
+}
+
+main {
+	/* display: flex; */
+}
+
+.main {
+	/* height: 100%; */
+	display: flex;
+	flex-direction: column;
+	/* justify-content: space-between; */
+	align-items: center;
+	/* align-self: center; */
+	/* border: 1px solid #8c7ae6; */
+	/* width: 50%; */
+}
+
+.button {
+	color: #8c7ae6;
+	border: 1px solid #8c7ae6;
+	border-radius: 10px;
+	font-size: 2em;
+	background-color: white;
+	margin: 0 0.5em 0 0.5em;
+}
+
+.buttons {
+	margin-top: 2em;
 }
 
 /*===== Dans le footer =====*/
